force-app/main/default/objects/ObjectSetting__mdt/ObjectSetting__mdt.object-meta.xml
<CustomObject>
    <label>Object Setting</label>
    <pluralLabel>Object Settings</pluralLabel>
</CustomObject>