force-app/main/default/objects/ObjectSetting__mdt/fields/All_OR_None__c.field-meta.xml
<CustomField>
    <fullName>All_OR_None__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this option if child records for this object setting should be inserted all at once after deleting the existing records.</inlineHelpText>
    <label>Process Child records as All-OR-None</label>
    <type>Checkbox</type>
</CustomField>