force-app/main/default/objects/ObjectSetting__mdt/fields/Always_Ignore_Response__c.field-meta.xml
<CustomField>
    <fullName>Always_Ignore_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Always Ignore Response</label>
    <type>Checkbox</type>
</CustomField>