force-app/main/default/objects/ObjectSetting__mdt/fields/BypassOrder__c.field-meta.xml
<CustomField>
    <fullName>BypassOrder__c</fullName>
    <defaultValue>true</defaultValue>
    <label>BypassOrder</label>
    <type>Checkbox</type>
</CustomField>