force-app/main/default/objects/ObjectSetting__mdt/fields/BypassTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Trigger</label>
    <type>Checkbox</type>
</CustomField>