force-app/main/default/objects/ObjectSetting__mdt/fields/Created_Source_FieldApiName__c.field-meta.xml
<CustomField>
    <fullName>Created_Source_FieldApiName__c</fullName>
    <description>Add the field API name (text field type) for the current object setting. This field will show if the record is created by Salesforce or External System.</description>
    <inlineHelpText>Add the field API name (text field type) for the current object setting. This field will show if the record is created by Salesforce or External System.</inlineHelpText>
    <label>Created Source Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>