force-app/main/default/objects/ObjectSetting__mdt/fields/Custom_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Field Value</label>
    <type>Checkbox</type>
</CustomField>