force-app/main/default/objects/ObjectSetting__mdt/fields/DELETE_URL_Pattern__c.field-meta.xml
<CustomField>
    <fullName>DELETE_URL_Pattern__c</fullName>
    <label>DELETE URL Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>