force-app/main/default/objects/ObjectSetting__mdt/fields/GET_URL_Pattern__c.field-meta.xml
<CustomField>
    <fullName>GET_URL_Pattern__c</fullName>
    <label>GET URL Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>