force-app/main/default/objects/ObjectSetting__mdt/fields/Maximum_Callout_Limit__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Callout_Limit__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Maximum Callout Limit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>