force-app/main/default/objects/ObjectSetting__mdt/fields/new__c.field-meta.xml
<CustomField>
    <fullName>new__c</fullName>
    <defaultValue>true</defaultValue>
    <label>new</label>
    <type>Checkbox</type>
</CustomField>