force-app/main/default/objects/ObjectSetting__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>ObjectSettings</relationshipLabel>
    <relationshipName>ObjectSettings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>