force-app/main/default/objects/ObjectSetting__mdt/fields/PATCH_URL_Pattern__c.field-meta.xml
<CustomField>
    <fullName>PATCH_URL_Pattern__c</fullName>
    <label>PATCH URL Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>