force-app/main/default/objects/ObjectSetting__mdt/fields/POST_URL_Pattern__c.field-meta.xml
<CustomField>
    <fullName>POST_URL_Pattern__c</fullName>
    <label>POST URL Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>