force-app/main/default/objects/ObjectSetting__mdt/fields/PUT_URL_Pattern__c.field-meta.xml
<CustomField>
    <fullName>PUT_URL_Pattern__c</fullName>
    <label>PUT URL Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>