force-app/main/default/objects/ObjectSetting__mdt/fields/QueryClause__c.field-meta.xml
<CustomField>
    <fullName>QueryClause__c</fullName>
    <label>Query Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>