force-app/main/default/objects/ObjectSetting__mdt/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <inlineHelpText>This is the Resource text defined for Field Settings. It will usually be the singular form of Resource Path</inlineHelpText>
    <label>Resource Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>