force-app/main/default/objects/ObjectSetting__mdt/fields/ResourcePath__c.field-meta.xml
<CustomField>
    <fullName>ResourcePath__c</fullName>
    <label>Resource Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>