force-app/main/default/objects/ObjectSetting__mdt/fields/Skip_Keys__c.field-meta.xml
<CustomField>
    <fullName>Skip_Keys__c</fullName>
    <inlineHelpText>Enter the comma-separated keys to skip while parsing the JSON.</inlineHelpText>
    <label>Skip Keys</label>
    <length>255</length>
    <type>Text</type>
</CustomField>