force-app/main/default/objects/ObjectSetting__mdt/fields/Trigger_Condition__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Condition__c</fullName>
    <label>Trigger Condition</label>
    <type>TextArea</type>
</CustomField>