force-app/main/default/objects/ObjectSetting__mdt/fields/url_params__c.field-meta.xml
<CustomField>
    <fullName>url_params__c</fullName>
    <inlineHelpText>Add URL params for the outbound callout if any. start with ? and separate each param with &amp;</inlineHelpText>
    <label>URL Params</label>
    <length>100</length>
    <type>Text</type>
</CustomField>