force-app/main/default/objects/ObjectSetting__mdt/listViews/All_Object_Settings.listView-meta.xml
<ListView>
    <fullName>All_Object_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ApexHandler__c</columns>
    <columns>BypassTrigger__c</columns>
    <columns>Direction__c</columns>
    <columns>ExternalFieldApi__c</columns>
    <columns>IntegrationType__c</columns>
    <columns>isInboundList__c</columns>
    <columns>ObjectApiName__c</columns>
    <columns>QueryClause__c</columns>
    <columns>ResourcePath__c</columns>
    <columns>Trigger_Condition__c</columns>
    <columns>TriggerEvents__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Object Settings</label>
</ListView>