force-app/main/default/objects/ObjectSetting__mdt/listViews/All_OS.listView-meta.xml
<ListView>
    <fullName>All_OS</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>ApexHandler__c</columns>
    <filterScope>Everything</filterScope>
    <label>All OS</label>
</ListView>